--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "### Deployed Heroku Link [Click Here to checkout a deployed application]()",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
